SALESFORCE/force-apps/deploy/main/default/objects/Exercise__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Exercises</relationshipLabel>
    <relationshipName>Exercises</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>