SALESFORCE/force-apps/deploy/main/default/objects/Exercise__c/fields/ExpectedDuration__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDuration__c</fullName>
    <label>Expected Duration</label>
    <length>30</length>
    <type>Text</type>
</CustomField>